--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,20 @@
-# ???? ??? ????????
-path.folder=C:\\gradle-8.8\\bin
+# Путь для проверки
+path.folder=C:\\test\\
 
-# ??? ????? - ??????
-path.report=C:\\gradle-8.8\\report.txt
+# Путь для отчета
+path.report=C:\\test\\report.html
 
-# ???????????? ????? ????
+# Максимальная длина пути
 max.path.length=150
 
-# ???????????? ??????? ???????????
+# Максимальная глубина вложенности
 max.path.nested=5
 
-# ???????????? ????? ????? ????? ? ???????????
+# Максимальная длина имени файла с расширением
 max.filename.length=25
 
-# ?????? ? ??????, ? ????????
+# Отступ в отчете, в пикселях
 report.step=15
 
-# ??????????? ?? ??????? ? ??????, regexp
-# ?????? ???: ???????, ?????, ?????? ?????????????, ??????, ????? ?????????? ? ???????? ?????????, ?????
-allow.symbols = [,_A-Za-z?-??-?0-9\\s.//\\\\]*
+# Ограничения на символы в строке, regexp
+allow.symbols = [,_A-Za-zА-Яа-я0-9\\s.//\\\\]*
