--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ report.step=15
 
 # Ограничения на символы в строке, regexp
 allow.symbols = [,_A-Za-zА-Яа-я0-9\\s.//\\\\]*
+
+# Ограничения на расширения, регистр не имеет значения
+allow.extensions = doc,docx,rtf,xls,xlsx,pdf,jpg,jpeg,png,tif
